tests/e2e/bundle/bundle-use-titles-for-component-names-collision/snapshot.txt

bundling openapi.yaml using configuration for api 'main'...
[1] schemas/b/User.yaml:2:8 at #/title

Title "User" maps to component name `User`, already used by the schema at ./tests/e2e/bundle/bundle-use-titles-for-component-names-collision/schemas/a/User.yaml. Rename one of the titles.

1 | type: object
2 | title: User
  |        ^^^^
3 | properties:
4 |   email: { type: string }

Error was generated by the bundler rule.


❌ Errors encountered while bundling openapi.yaml: bundle not created (use --force to ignore errors).
